# recaller

./: .gitignore  CUDA13_PYNVVIDEOCODEC_SOLUTION.md  HTTP_PROXY_LRU_CACHE.md  PERFECT_READS_PLAN.md  SUMMARY_CUDA13_FIX.md  VIRTUAL_MP4_FILE_PROPOSAL.md
cloudflare_infra/: AGENTS.md  README.md  alchemy.run.ts  package.json  tsconfig.json
cloudflare_infra/model/: infrastructure.ts
cloudflare_infra/src/: IMPLEMENTATION_REVIEW.md  PERFECT_READS_IMPLEMENTATION.md  cloudflare-workers.d.ts  container.ts  mp4-parser.ts  mp4_parser.ts  perfect-read.ts  perfect_read.ts  sidecar-reader.ts  sqlite_parser.ts  worker.ts
cloudflare_infra/src/implementations/: sqlite_reader_placeholder.ts
cloudflare_infra/src/routes/: health.ts  perfect-read-route.ts  transcode.ts
cloudflare_infra/src/services/: container-fetch.ts  r2-presign.ts
cloudflare_infra/src/types/: http.ts  mp4_types.ts  sqlite_types.ts
cloudflare_infra/src/utils/: youtube.ts
data_source/: HEVC_FORMATS.md
modal_dockerfile/: .dockerignore  Dockerfile  README.md  build_and_push.sh
modal_runner/: .gitignore  AGENTS.md  BANDWIDTH_TRACKING.md  README.md  inference.py  inference_runner.py  pyproject.toml  run_local.py  video_frame_extractor.py
modal_runner/inference_runner/: __init__.py  proxy.py  runner.py
video_transcoder/: Dockerfile  README.md  mp4_parser.py  requirements.txt  server.py  sidecar_generator.py
video_transcoder_test/: Dockerfile.urlhelper  README.md  docker-compose.yml  generate_url.py  requirements.txt  simple_test.py  test_transcoder.py
